modified:   youtube-dl-aria.conf 	modified:   youtube-dl.conf

--- a/youtube-dl-aria.conf
+++ b/youtube-dl-aria.conf
@@ -6,7 +6,7 @@
 --external-downloader-args "-c -j 5 -x 10 --summary-interval=0"
 
 # Archive Settings
---download-archive youtube-dl-archive.txt
+--download-archive youtube-dl-archive.log
 -a youtube-dl-channels.txt
 
 # Uniform Format
