--- a/youtube-dl.conf
+++ b/youtube-dl.conf
@@ -2,7 +2,7 @@
 -o "%(uploader)s (%(uploader_id)s)/%(upload_date)s - %(title)s - (%(duration)ss) [%(resolution)s] [%(id)s].%(ext)s"
 
 # Archive Settings
---download-archive youtube-dl-archive.txt
+--download-archive youtube-dl-archive.log
 -a youtube-dl-channels.txt
 
 # Uniform Format
