--- a/Transcription Pipeline/config.yaml
+++ b/Transcription Pipeline/config.yaml
@@ -1,2 +1,2 @@
-#gcs_bucket: ""
-openai_api_key: "sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+#gcs_bucket: 'blindy-transcriptions'
+openai_api_key: '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'
